[tool.poetry]
name = "pysquaredle"
version = "0.1.0"
description = "A Squaredle Puzzle Solver"
authors = ["Rob Rainthorpe <robr@robrainthorpe.com>"]
repository = "https://github.com/ratbag98/PySquaredle.git"
license = "MIT"
readme = "README.md"
keywords = ["squaredle", "puzzle", "solver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.4.0"
conda-lock = "^1.4.0"
requests = "^2.28.2"
rich = "^13.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.15.10"
pytest-qt = "^4.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
ipython = "^8.9.0"
mypy = "^0.991"
types-requests = "^2.28.11.8"

[tool.poetry.scripts]
pysquaredle = "pysquaredle.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
