[tool.poetry]
name = "squaredle"
version = "0.1.1"
description = "A Squaredle Puzzle Solver"
authors = ["Rob Rainthorpe <robr@robrainthorpe.com>"]
repository = "https://github.com/ratbag98/PySquaredle.git"
license = "MIT"
readme = "README.md"
keywords = ["squaredle", "puzzle", "solver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "pysquaredle/**/*.py" }]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.4.0"
requests = "^2.28.2"
rich = "^13.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-qt = "^4.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
ruff = "*"            # "^0.0.292"
#types-requests = "^2.28.11.8"
pyright = "^1.1.331"

[tool.poetry.scripts]
squaredle = "squaredle.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".venv", "tests"]
ignore = ["ANN101", "COM812"]
select = ["ALL"]
target-version = "py311"      # check this matches tool.poetry.dependencies.python above
#     "A",    # don't clobber builtins
#     "ARG",  # flake8 unused arguments
#     "B",    # bugbear: security warnings
#     "D",    # pydocstyle
#     "E",    # pycodestyle
#     "ERA",  # don't allow commented out code
#     "F",    # pyflakes
#     "I",    # isort
#     "ISC",  # implicit string concatenation
#     "N",    # pep8-naming
#     "PERF", # performance 
#     "RUF",  # ruff developers' pet rules
#     "SIM",  # flake8 simplify
#     "TCH",  # flake8 type checking
#     "UP",   # pyupgrade
#     "W",    # pycodestyle
# ]

[tool.ruff.pydocstyle]
convention = "google"
