[project]
name = "pysquaredle"
version = "0.1.0"
description = "A Squaredle Puzzle Solver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyqt6>=6.8.1", "requests>=2.32.3", "rich>=13.9.4"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
 "pytest-cov>=6.0.0",
 "pytest-qt>=4.4.0",
]
